--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 ***REMOVED***
-***REMOVED*** sdf
-***REMOVED*** sdf
-***REMOVED*** sdf
+***REMOVED*** ***REMOVED***
+***REMOVED*** ***REMOVED***
+***REMOVED*** ***REMOVED***
 
