--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 ***REMOVED***
-***REMOVED*** ***REMOVED***
-***REMOVED*** ***REMOVED***
-***REMOVED*** ***REMOVED***
+***REMOVED*** asd
+***REMOVED*** asd
+***REMOVED*** asd
 
