--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,10 @@
-appdirs==1.4.3
-attrs==19.3.0
-Automat==0.8.0
-backcall==0.1.0
-beautifulsoup4==4.11.2
-blinker==1.4
-boto==2.49.0
-certifi==2022.12.7
-chardet==3.0.4
-charset-normalizer==3.1.0
-click==8.1.3
-cloud-init==20.2
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.8
-cssselect==1.1.0
-cupshelpers==1.0
-dbus-python==1.2.16
-decorator==4.4.2
-defer==1.0.6
-distlib==0.3.0
-distro==1.4.0
-distro-info===0.23ubuntu1
-docopt==0.6.2
-docutils==0.19
-entrypoints==0.3
-feedgenerator==2.0.0
-filelock==3.0.12
-Flask==2.2.3
-html5lib==1.0.1
-httplib2==0.14.0
-hyperlink==19.0.0
-idna==3.4
-importlib-metadata==6.5.0
-incremental==16.10.1
-install==1.3.5
-ipython==7.13.0
-ipython-genutils==0.2.0
-itsdangerous==2.1.2
-jedi==0.15.2
-Jinja2==3.1.2
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lxml==4.5.0
-macaroonbakery==1.3.1
-Markdown==3.4.3
-markdown-it-py==2.1.0
-MarkupSafe==2.1.2
-mdurl==0.1.2
-more-itertools==4.2.0
-MouseInfo==0.1.3
-mysqlclient==1.4.4
-netifaces==0.10.4
-oauthlib==3.1.0
-olefile==0.46
-parsel==1.5.2
-parso==0.5.2
-path-and-address==2.0.1
-pbr==5.11.0
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==7.0.0
-prompt-toolkit==2.0.10
-protobuf==3.6.1
-psutil==5.5.1
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-PyAutoGUI==0.9.53
-pycairo==1.16.2
-pycups==1.9.73
-PyDispatcher==2.0.5
-PyGetWindow==0.0.9
-Pygments==2.15.1
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyMsgBox==1.0.9
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyperclip==1.8.2
-PyRect==0.2.0
-pyRFC3339==1.1
-pyrsistent==0.15.5
-PyScreeze==0.1.28
-pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.1
-python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
-python3-xlib==0.15
-pytweening==1.0.4
-pytz==2022.7.1
-PyYAML==5.3.1
-queuelib==1.5.0
-requests==2.28.2
-requests-unixsocket==0.2.0
-rich==13.3.1
-Scrapy==1.7.3
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
-six==1.14.0
-soupsieve==1.9.5
-ssh-import-id==5.10
-stevedore==4.1.0
-systemd-python==234
-traitlets==4.3.3
-Twisted==18.9.0
-typing-extensions==4.4.0
-ubuntu-advantage-tools==20.3
-ufw==0.36
-unattended-upgrades==0.1
-Unidecode==1.3.6
-urllib3==1.26.15
-virtualenv==20.0.17
-virtualenv-clone==0.5.7
-virtualenvwrapper==4.8.4
-w3lib==1.21.0
-wadllib==1.3.3
-wcwidth==0.1.8
-webencodings==0.5.1
-Werkzeug==2.2.3
-youtube-dl==2021.12.17
-zipp==3.15.0
-zope.interface==4.7.1
+telethon
+pandas==1.5.3
+openpyxl==3.0.10
+tqdm==4.64.1
+networkx==3.0
+matplotlib==3.6.3
+python-louvain==0.16
+openai==0.27.2
+streamlit==1.21.0
+streamlit-extras==0.2.7
