--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-telethon
-pandas
-openpyxl
-tqdm
-networkx
-matplotlib
-python-louvain
-streamlit
-streamlit-extras
-pycryptodome
+telethon==1.26.1
+pandas==1.5.3
+openpyxl==3.0.10
+tqdm==4.64.1
+networkx==3.0
+matplotlib==3.6.3
+python-louvain==0.16
+streamlit==1.22.0
+streamlit-extras==0.2.7
+pycryptodome==3.17
