nuitka test and readme update

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,3 +7,10 @@ font="monospace"
 
 [client]
 toolbarMode = "minimal"
+
+[global]
+developmentMode = false
+
+[server]
+port = 8502
+headless = true
