--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-telethon
-pandas
-openpyxl
-tqdm
-networkx
-matplotlib
-python-louvain
-streamlit
-pycryptodome
-psutil
+telethon>=1.26.1
+pandas>=1.5.3
+openpyxl>=3.1.2
+tqdm>=4.64.1
+networkx>=3.0
+matplotlib>=3.6.3
+python-louvain>=0.16
+streamlit>=1.27.1
+pycryptodome>=3.17
+psutil>=5.9.5
