--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-telethon @ git+https://github.com/LonamiWebs/Telethon@releases/tag/1.30.3
+telethon @ git+https://github.com/LonamiWebs/Telethon@releases/tag/v1.30.3
 pandas @ git+https://github.com/pandas-dev/pandas@releases/tag/v2.1.1
 openpyxl @ gith+https://github.com/theorchard/openpyxl@master
 tqdm @ git+https://github.com/tqdm/tqdm@releases/tag/v4.66.1
