--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pandas==1.5.3
 openpyxl==3.1.2
 tqdm==4.64.1
 networkx==3.0
+community==1.0.0b1
 matplotlib==3.6.3
 python-louvain==0.16
 streamlit==1.27.0
